fixes safari card issues on small screens

--- a/resources/css/screen.css
+++ b/resources/css/screen.css
@@ -19411,14 +19411,29 @@ input.input-inner:focus {
   }
 }
 
-/* line 77, resources/scss/pages/_cards-home.scss */
+@media screen and (max-width: 900px) {
+  /* line 56, resources/scss/pages/_cards-home.scss */
+  #card-row {
+    min-height: 912px !important;
+  }
+}
+
+/* line 81, resources/scss/pages/_cards-home.scss */
 #card-image-row {
   background-color: #124086 !important;
   justify-content: center !important;
   align-content: center !important;
 }
 
-/* line 83, resources/scss/pages/_cards-home.scss */
+@media screen and (max-width: 900px) {
+  /* line 81, resources/scss/pages/_cards-home.scss */
+  #card-image-row {
+    justify-content: start !important;
+    align-content: start !important;
+  }
+}
+
+/* line 92, resources/scss/pages/_cards-home.scss */
 #card-text {
   background-color: #124086 !important;
   color: #FBFCFE !important;
@@ -19431,17 +19446,8 @@ input.input-inner:focus {
   padding-right: 12px !important;
 }
 
-@media screen and (min-height: 1000px) {
-  /* line 83, resources/scss/pages/_cards-home.scss */
-  #card-text {
-    flex: 1 1 120px !important;
-    height: 120px !important;
-    min-height: 120px !important;
-  }
-}
-
-@media screen and (min-height: 1200px) {
-  /* line 83, resources/scss/pages/_cards-home.scss */
+@media screen and (max-width: 900px) {
+  /* line 92, resources/scss/pages/_cards-home.scss */
   #card-text {
     flex: 1 1 150px !important;
     height: 150px !important;
@@ -19449,8 +19455,44 @@ input.input-inner:focus {
   }
 }
 
+@media screen and (min-height: 1000px) {
+  /* line 92, resources/scss/pages/_cards-home.scss */
+  #card-text {
+    flex: 1 1 120px !important;
+    height: 120px !important;
+    min-height: 120px !important;
+  }
+}
+
+@media screen and (min-height: 1000px) and (max-width: 900px) {
+  /* line 92, resources/scss/pages/_cards-home.scss */
+  #card-text {
+    flex: 1 1 85px !important;
+    height: 85px !important;
+    min-height: 85px !important;
+  }
+}
+
+@media screen and (min-height: 1200px) {
+  /* line 92, resources/scss/pages/_cards-home.scss */
+  #card-text {
+    flex: 1 1 150px !important;
+    height: 150px !important;
+    min-height: 150px !important;
+  }
+}
+
+@media screen and (min-height: 1200px) and (max-width: 900px) {
+  /* line 92, resources/scss/pages/_cards-home.scss */
+  #card-text {
+    flex: 1 1 85px !important;
+    height: 85px !important;
+    min-height: 85px !important;
+  }
+}
+
 @media screen and (max-width: 900px) {
-  /* line 83, resources/scss/pages/_cards-home.scss */
+  /* line 92, resources/scss/pages/_cards-home.scss */
   #card-text {
     padding-top: 6px !important;
     padding-bottom: 6px !important;
@@ -19460,20 +19502,20 @@ input.input-inner:focus {
 }
 
 @media screen and (max-width: 768px) {
-  /* line 83, resources/scss/pages/_cards-home.scss */
+  /* line 92, resources/scss/pages/_cards-home.scss */
   #card-text {
     min-height: auto !important;
   }
 }
 
-/* line 119, resources/scss/pages/_cards-home.scss */
+/* line 144, resources/scss/pages/_cards-home.scss */
 #card-title-icon {
   font: 700 18px Roboto, Helvetica, "Helvetica Neue", Arial, sans-serif !important;
   padding-bottom: 6px !important;
   max-height: 28px;
 }
 
-/* line 125, resources/scss/pages/_cards-home.scss */
+/* line 150, resources/scss/pages/_cards-home.scss */
 .card-title {
   font-size: 18px !important;
   flex: 1 1 auto !important;
@@ -19481,26 +19523,26 @@ input.input-inner:focus {
 }
 
 @media screen and (max-width: 599px) {
-  /* line 125, resources/scss/pages/_cards-home.scss */
+  /* line 150, resources/scss/pages/_cards-home.scss */
   .card-title {
     font-size: 18px !important;
   }
 }
 
-/* line 135, resources/scss/pages/_cards-home.scss */
+/* line 160, resources/scss/pages/_cards-home.scss */
 .card-title a {
   color: #FBFCFE !important;
   text-decoration: none !important;
 }
 
-/* line 141, resources/scss/pages/_cards-home.scss */
+/* line 166, resources/scss/pages/_cards-home.scss */
 .card-icon {
   flex: 0 0 auto !important;
   font-size: 24px !important;
   margin-right: 12px !important;
 }
 
-/* line 147, resources/scss/pages/_cards-home.scss */
+/* line 172, resources/scss/pages/_cards-home.scss */
 .card-image {
   height: auto !important;
   -webkit-border-radius: 5px 5px;
@@ -19511,7 +19553,14 @@ input.input-inner:focus {
   padding: 1px !important;
 }
 
-/* line 155, resources/scss/pages/_cards-home.scss */
+@media screen and (max-width: 900px) {
+  /* line 172, resources/scss/pages/_cards-home.scss */
+  .card-image {
+    align-self: start !important;
+  }
+}
+
+/* line 184, resources/scss/pages/_cards-home.scss */
 #card-description {
   font-size: 14px !important;
 }
